--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,16 @@ body {
   border-top: 15px solid #E76F51;
 }
 
+.contact-triangle {
+  margin-left: auto; 
+  margin-right: 100px;
+  width: 0;
+  height: 0;
+  border-left: 15px solid transparent;
+  border-right: 15px solid transparent;
+  border-top: 15px solid #E76F51;
+}
+
 .triangle-yellow {
   width: 0;
   height: 0;
