Restyled some components

--- a/src/index.css
+++ b/src/index.css
@@ -55,7 +55,7 @@ body {
 .content-div:hover {
   background-image: linear-gradient(
       to right,
-      rgba(112, 157, 255, 0.8),
-      hsla(242, 74%, 61%, 0.8)   
+      rgba(38, 70, 83, 0.8),
+      rgba(231, 111, 81, 0.2)   
   )!important;
 }
